--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,13 @@ repositories {
 }
 
 dependencies {
+
+    implementation(group: 'org.jsoup', name: 'jsoup', version: '1.12.1')
+    testImplementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.11'
+    testImplementation group: 'org.mock-server', name: 'mockserver-netty', version: '5.8.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
+
 }
 
 application {
