--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 plugins {
     id 'java'
     id 'application'
+    id 'org.springframework.boot' version '2.2.6.RELEASE' // 
 }
 
 repositories {
@@ -10,8 +11,15 @@ repositories {
 
 dependencies {
 
+    //https://mvnrepository.com/
+
+    //spring-boot-starter-web
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.2.6.RELEASE'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '2.2.6.RELEASE'
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.12'
     implementation(group: 'org.jsoup', name: 'jsoup', version: '1.12.1')
     implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.11'
+
     testImplementation group: 'org.mock-server', name: 'mockserver-netty', version: '5.8.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
@@ -19,7 +27,7 @@ dependencies {
 }
 
 application {
-    mainClassName = 'javapractice.git.App'
+    mainClassName = 'App'
 }
 
 test {
